fixed margin overflow in clicked game container

--- a/src/styles/shopPage.css
+++ b/src/styles/shopPage.css
@@ -298,8 +298,12 @@ li {
         align-self: center;
     }
 
+    .clicked-game-button {
+        margin: 0;
+    }
+
     .clicked-game-name {
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
     .close-clicked-game {
